<resources>
    <string name="app_name">TTSL</string>
    <string name="track_cargo">Track Cargo</string>
    <string name="pending_invo">Pending Invoice</string>
    <string name="schedule">Sailing Schedule</string>
    <string name="quotation">Get Quotation</string>
    <string name="bill_list">Bill List</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="About_us">About us</string>
    <string name="logout">Logout</string>
    <string name="btn_agent_info">Get agent info</string>
    <string name="title_activity_main2">ButtomBar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="contact_address">7th Floor, T Square,\n Opp Chandivali Petrol Pump,\n Sakinaka, \n Andheri(E) Mumbai -400 072</string>
    <string name="title_activity_login">Sign in</string>
    <string name="msg_logout_application">Are you sure to logout this application ?</string>
    <string name="btn_alert_dialog_positave">Yes</string>
    <string name="btn_alert_dialog_negetive">No</string>
    <string name="hint_enter_track_no">Enter tracking no.</string>
    <string name="btn_track">Track</string>
    <string name="err_msg_title_dialog">Error</string>
    <string name="err_msg_track_cargo_dialog">Please select tracking type</string>
    <string name="title_track_shipment">Track Shipment</string>
    <string name="heading_tacking_details">Details</string>
    <string name="heading_shipment_carted">Carted</string>
    <string name="heading_received_carted">Received</string>
    <string name="heading_booked_cart">Booked</string>
    <string name="heading_stuffed_cart">Stuffed</string>
    <string name="heading_generated_cart">Generated</string>
    <string name="heading_loaded_cart">Loaded</string>
    <string name="title_pending_invoice">Pending Invoice</string>
    <string name="heading_check_box">Select All</string>
    <string name="heading_payable_amount">AMOUNT</string>
    <string name="btn_bill_pay">Proceed to Pay Bill</string>
    <string name="title_sailing_schedule">Sailing Schedule</string>
    <string name="label_port_of_loading">From</string>
    <string name="label_port_of_discharge">To</string>
    <string name="label_from_etd">From  ETD</string>
    <string name="label_to_etd">To ETD</string>
    <string name="label_from_eta">From ETA</string>
    <string name="label_to_eta">To ETA</string>
    <string name="label_date_of_arrival">Date of Arrival</string>
    <string name="label_vessel">Vessel</string>
    <string name="hint_port_of_loading">select port of loading</string>
    <string name="hint_port_of_discharge">select port of discharge</string>
    <string name="err_loading_port_empty">Please select loading port</string>
    <string name="err_discharge_port_empty">Please select discharge port</string>
    <string name="err_from_etd_port_empty">Please select from ETD</string>
    <string name="err_to_etd_port_empty">Please select to ETD</string>
    <string name="err_from_eta_port_empty">Please select from ETA</string>
    <string name="err_to_eta_port_empty">Please select to ETA</string>
    <string name="err_vessel_empty">Please select vessel</string>
    <string name="err_port_is_same">Loading port and Discharge port must be different</string>
    <string name="err_msg_select_from_etd_first">Please select from estimated time(From ETD)of departure</string>
    <string name="err_msg_select_to_etd_first">Please select to estimated time(To ETD) of departure </string>
    <string name="err_msg_select_from_eta_first">Please select from estimated time(From ETA) of arrival frist</string>
    <string name="title_port_of_loading">Port of loading</string>
    <string name="title_port_of_discharge">Port of discharge</string>
    <string name="hint_search_loading_port">Search for a departure port</string>
    <string name="hint_search_discharge_port">Search for discharge port</string>
    <string name="label_sector">Sector</string>
    <string name="label_services">Services</string>
    <string name="label_voy">VOY</string>
    <string name="home_new">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_feeds">Feeds</string>
    <string name="nav_leads">Leads</string>
    <string name="nav_account">Account</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_deals">Deals</string>
    <string name="nav_task">Task</string>
    <string name="nav_event">Event</string>
    <string name="nav_call">Call</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="nav_promotional_mail">Promotional Mail</string>
    <string name="header_home_event">Events</string>
    <string name="header_home_call">Calls</string>
    <string name="header_home_task">Tasks</string>
    <string name="msg_no_event">No Events for this day</string>
    <string name="msg_no_tasts">No Task for this day</string>
    <string name="msg_no_calls">No Call for this day</string>
    <string name="btn_add_event">+Event</string>
    <string name="btn_add_task">+Task</string>
    <string name="btn_add_call">+Call</string>
    <string name="title_get_quotation">Get Quotation</string>
    <string name="btn_next">next</string>
    <string name="btn_previous">previous</string>
    <string name="btn_finish">finish</string>
    <string name="label_total_charges">Total Charges</string>
    <string name="title_bl_list">BL List</string>
    <string name="label_bl_no">BL No.</string>
    <string name="label_bl_date">BL Date</string>
    <string name="label_etd">ETD</string>
    <string name="label_eta">ETA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="alert_authentication_title">Login failed..</string>
    <string name="alert_authentication_msg">Username/Password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_login_user_name">User Name</string>
    <string name="hint_password">Password</string>
    <string name="title_login_check_box">Remember me</string>
    <string name="title_login_forget_password">Forgot Password?</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_services">services</string>
    <string name="title_track_cargo">Track Cargo</string>
    <string name="title_quotation">quotation</string>
    <string name="title_sail_schedule">Sail Schedule</string>
    <string name="title_agent_info">Agent Info</string>
    <string name="title_log_out">Log out</string>
    <string name="show_success_login">Login Successfully</string>
    <string name="title_profile">Profile</string>
    <string name="signup_btn">Register</string>
    <string name="singup_text_signin">Don\'t have an Account? Sign up now</string>
    <string name="signin_text_signup">Already have an Account? Sign in </string>
    <string name="hint_select_date">Select Date</string>
    <string name="btn_search">search</string>
    <string name="title_toolbar_services">Services</string>
    <string name="err_login_password">please enter password</string>
    <string name="err_login_username">please enter username</string>
    <string name="title_desh_board">Wel-Come TTSL</string>
    <string name="title_add_task">Add Task</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_due_date">Due Date</string>
    <string name="label_completion_date">Completion Date</string>
    <string name="label_contact_mode">Contact Mode</string>
    <string name="label_salesman">Salesman</string>
    <string name="label_customer">Select Customer</string>
    <string name="label_select_contact">Select Contact</string>
    <string name="label_discription">Description</string>
    <string name="label_add_note">Add Note</string>
    <string name="label_add_comments">Add Comment</string>
    <string name="label_priority">Add Priority</string>
    <string name="title_add_call_activity">Add Call</string>
    <string name="title_edit_call_activity">Edit Call</string>
    <string name="header_call_information">CALL INFORMATION</string>
    <string name="msg_enter_subject">Please enter Subject </string>
    <string name="msg_empty_call_duration">Please enter Call Duration </string>
    <string name="heading_client_details">Client Details</string>
    <string name="label_call_type">Type</string>
    <string name="title_call_list_activity">Calls</string>
    <string name="label_call_contact">Contact</string>
    <string name="label_call_subject">Subject</string>
    <string name="label_call_purpose">Call Purpose</string>
    <string name="label_call_account">Account</string>
    <string name="label_call_type1">Call Type</string>
    <string name="title_call_type">Call Type</string>
    <string name="label_call_start_time">Call Start Time</string>
    <string name="label_call_start_date">Call Start Date</string>
    <string name="label_call_duration">Call Duration</string>
    <string name="label_call_description">Description</string>
    <string name="label_call_result">Call Result</string>
    <string name="label_call_billable">Billable</string>
    <string name="label_call_date">Call Date</string>
    <string name="label_customer_call"><font color="#ED5565">*</font>Customer</string>
    <string name="label_salesman_call"><font color="#ED5565">*</font>Salesman</string>
    <string name="label_sales_territory">Sales Territory</string>
    <string name="label_planned_date">Planned Date</string>
    <string name="label_call_created_by">Created By</string>
    <string name="label_call_modified_by">Modified By</string>
    <string name="label_call_created_time">Created Time</string>
    <string name="footer_show_all_fields">Show all fields</string>
    <string name="header_event_information">Event information</string>
    <string name="label_event_title">Title</string>
    <string name="label_event_location">Location</string>
    <string name="label_event_all_day">All day</string>
    <string name="label_event_from">From</string>
    <string name="label_event_to">To</string>
    <string name="label_event_host">Host</string>
    <string name="label_event_contact">Contacts</string>
    <string name="label_event_other_info">Event Other Information</string>
    <string name="label_event_description">Description</string>
    <string name="label_event_created_by">Created By</string>
    <string name="label_event_modified_by">Modified By</string>
    <string name="label_event_created_time">Created Time</string>
    <string name="label_event_modified_time">Modified Time</string>
    <string name="toolbar_login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="select_office">Select Office</string>
    <string name="select_language">Select Language</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="nav_customer_challenge">Customer Challenge</string>
    <string name="nav_budget">Sales Budget</string>
    <string name="nav_contactus">Contact Us</string>
</resources>