<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuotationFormActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/title_get_quotation"
        app:titleTextColor="@color/colorWhite"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="5dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />


    <LinearLayout
        android:padding="16dp"
        android:id="@+id/layout_step_view"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_step_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />
    </LinearLayout>



    <com.software.ttsl.Fragment.NonSwipeableViewPager

        android:id="@+id/viewpager"
        android:layout_below="@id/layout_step_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_footer"/>

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/btn_text_color"
            android:text="@string/btn_previous"
            android:layout_alignParentLeft="true"
            />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_next"
            android:textColor="@color/btn_text_color"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>